<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/menu_height"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_sign_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/text_size_16"
        android:text="@string/sign_number" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_btn_bg_color"></View>

    <TextView
        android:id="@+id/tv_sign_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/text_size_16"
        android:text="@string/sign_name" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_btn_bg_color"></View>

    <TextView
        android:id="@+id/tv_sign_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/text_size_16"
        android:text="@string/sign_department" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_btn_bg_color"></View>

    <TextView
        android:id="@+id/tv_sign_duty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/text_size_16"
        android:text="@string/sign_duty" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/gray_btn_bg_color"></View>

    <TextView
        android:id="@+id/tv_sign_signtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="@dimen/text_size_16"
        android:text="@string/sign_signtime" />

</LinearLayout>